io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/illegaltypeforstoragefield4/MyInterface.java
package io.hotmoka.examples.errors.illegaltypeforstoragefield4;

public interface MyInterface {
}